--- a/OPERAR.html
+++ b/OPERAR.html
@@ -11,6 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <h1>OPERACIÓN SUMAR ONLINE</h1>
 
         <div>
             <form method="POST" oninput="resultado.value=parseInt(valor1.value)+parseInt(valor2.value)">
